--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: #1b1a1a;
+    background: #121111;
 }
 
 .container{
@@ -284,7 +284,6 @@ main{
 
 /*AQUI COMECA O MENU*/
 section{
-    width: 100%;
     height: 100px;
     background: #121111;
 }
@@ -322,6 +321,10 @@ section{
 .control-menu nav li{
     text-decoration: none;
     display: inline-block;
+}
+/*MOBILE MENU*/
+.control-menu2 nav{
+    display: none;
 }
 
 /*AQUI TERMINA*/
@@ -666,6 +669,57 @@ article img{
 /*RESPONSIVEL*/
 @media only screen and (max-width: 1080px) {
 
+
+    section{
+        height: 50px;
+        background: #121111;
+    }
+
+    /*MENU*/
+    .control-menu nav{
+        display: none;
+        text-align: center;
+        color: white;
+    }
+    
+    .control-menu2 nav{
+        display: block;
+        text-align: center;
+        color: white;
+    }
+    
+    .control-menu2 nav a{
+        color: white;
+        text-decoration: none;
+        font-size: 15px;
+        transition: 1s;
+        border-radius: 10px;
+        width: 10px;
+        height: 20px;
+        padding: 10px;
+        background-color: #ff5656;
+        transition: 0.1s;
+    }
+
+    .control-menu2 nav a:hover{
+        color: black;
+        text-decoration: none;
+        font-size: 15px;
+        transition: 1s;
+        border-radius: 10px;
+        width: 10px;
+        height: 20px;
+        padding: 10px;
+        background-color: white;
+        transition: 0.1s;
+    }
+    
+    .control-menu2 nav li{
+        padding-top: 20px;
+        text-decoration: none;
+        display: inline-block;
+    }
+
     /*REGRAS*/
     #regras{
         height: 1300px;
@@ -675,10 +729,10 @@ article img{
 
     .control-text{
         width: 100%;
-        max-width: 400px;
+        max-width: 300px;
         position: absolute;
         left: 50%;
-        top: 73%;
+        top: 68%;
         transform: translate(-50%,-50%);
     }
     
@@ -686,8 +740,11 @@ article img{
         display: block;
         width: 100%;
         max-width: 400px;
-        margin-left: 50px;
-        margin-top: 50px;
+        margin: 0 auto;
+    }
+
+    #regras p{
+        font-size: 15px;
     }
 
     /*FIM DAS REGRAS*/
@@ -705,12 +762,22 @@ article img{
     .control-contas{
         background: #ff5656;
         position: absolute;
-        width:300px;
+        width:200px;
         height: 60px;
         border-radius: 10px;
-        left: 40%;
+        left: 37%;
         transform: translate(-50%,-50%);
-        margin: 50px;
+    }
+
+    article h1{
+        width: 300px;
+        color: white;
+        text-align: center;
+        font-size: 25px;
+        position: absolute;
+        left:50%;
+        top:50%;
+        transform: translate(-50%,-50%);
     }
 
     article .control-produtos{
